--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,10 @@
       border-radius: 50%;
       color: #fff;
   }
+  button.remove-cart-btn{
+    background-color: rebeccapurple;
+    margin-top: 8px;
+  }
   /*  */
   @keyframes App-logo-spin {
     from {
